fix table cell data alignment

--- a/src/components/StatewiseData/styles.scss
+++ b/src/components/StatewiseData/styles.scss
@@ -7,7 +7,7 @@
     td {
       vertical-align: baseline;
       padding: 0.8rem;
-      text-align: center;
+      text-align: right;
       width: 4rem;
       &:first-child {
         text-align: left;
